@@ -1,101 +1,106 @@
 package ru.yandex.practicum.filmorate.service.User;
 
-import ru.yandex.practicum.filmorate.exception.FriendExistsException;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dto.UserCreateDto;
+import ru.yandex.practicum.filmorate.dto.UserResponseDto;
+import ru.yandex.practicum.filmorate.dto.UserUpdateDto;
+import ru.yandex.practicum.filmorate.exception.EmailExistsException;
+import ru.yandex.practicum.filmorate.exception.ValidationException;
+import ru.yandex.practicum.filmorate.mapper.UserMapper;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
-import ru.yandex.practicum.filmorate.exception.ValidationException;
 
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
 import java.util.Collection;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class UserService {
     private final UserStorage userStorage;
 
-    public Collection<User> getAllUsers() {
-        return userStorage.getAllUsers();
+    public Collection<UserResponseDto> getAllUsers() {
+        return userStorage.getAllUsers().stream()
+                .map(UserMapper::mapToUserDto)
+                .toList();
     }
 
-    public User getUser(Long id) {
-        return userStorage.getUser(id);
+    public UserResponseDto getUser(Long id) {
+        User found = userStorage.getUser(id);
+        return UserMapper.mapToUserDto(found);
     }
 
-    public User create(User user) {
-        //user.clearFriends();
-        user.getFriends().clear();
-        return userStorage.create(user);
+    public UserResponseDto create(UserCreateDto userCreateDto) {
+        if (userStorage.isEmailUsed(userCreateDto.getEmail())) {
+            throw new EmailExistsException(userCreateDto.getEmail());
+        }
+
+        User userToCreate = UserMapper.mapToUser(userCreateDto);
+        User created = userStorage.create(userToCreate);
+        if (created == null)
+            throw new IllegalStateException("Не удалось сохранить данные для нового пользователя");
+        log.info("Пользователь успешно создан: {}", created);
+        return UserMapper.mapToUserDto(created);
     }
 
-    public User update(User user) {
-        User updatedUser = userStorage.getUser(user.getId());
+    public UserResponseDto update(UserUpdateDto user) {
+        User origin = userStorage.getUser(user.getId());
 
-        if (user.getEmail() != null)
-            updatedUser.setEmail(user.getEmail());
+        if (user.getEmail() != null && !user.getEmail().equals(origin.getEmail())) {
+            if (userStorage.isEmailUsed(user.getEmail()))
+                throw new EmailExistsException(user.getEmail());
+
+            origin.setEmail(user.getEmail());
+        }
 
         if (user.getBirthday() != null)
-            updatedUser.setBirthday(user.getBirthday());
+            origin.setBirthday(user.getBirthday());
 
         if (user.getName() != null)
-            updatedUser.setName(user.getName());
+            origin.setName(user.getName());
 
         if (user.getLogin() != null)
-            updatedUser.setLogin(user.getLogin());
+            origin.setLogin(user.getLogin());
 
-        // Чтобы не потерять друзей:
-        if (user.getFriends() != null)
-            updatedUser.setFriends(user.getFriends());
+        User updated = userStorage.update(origin);
+        if (updated == null)
+            throw new IllegalStateException("Не удалось сохранить данные для пользователя");
 
-        return userStorage.update(updatedUser);
+        return UserMapper.mapToUserDto(updated);
     }
 
     public void addFriend(Long id, Long friendId) {
         if (id.equals(friendId))
             throw new ValidationException(id + " = " + friendId);
 
-        User user = userStorage.getUser(id);
-        User friend = userStorage.getUser(friendId);
-
-        if (!user.getFriends().add(friendId))
-            throw new FriendExistsException(id, friendId);
-        //user.addFriend(friendId);
-
-        if (!friend.getFriends().add(id))
-            throw new FriendExistsException(friendId, id);
-        //friend.addFriend(id);
+        userStorage.addFriend(id, friendId);
     }
 
     public void removeFriend(Long id, Long friendId) {
-        User user1 = userStorage.getUser(id);
-        User user2 = userStorage.getUser(friendId);
+        if (id.equals(friendId))
+            throw new ValidationException(id + " = " + friendId);
 
-        //user1.removeFriend(friendId);
-        user1.getFriends().remove(friendId);
-
-        //user2.removeFriend(id);
-        user2.getFriends().remove(id);
+        userStorage.removeFriend(id, friendId);
     }
 
-    public Set<User> getCommonFriends(Long id, Long otherId) {
+    public Set<UserResponseDto> getCommonFriends(Long id, Long otherId) {
         if (id.equals(otherId))
             return Set.of();
 
-        Set<Long> friends1 = userStorage.getUser(id).getFriends();
-        Set<Long> friends2 = userStorage.getUser(otherId).getFriends();
-
-        return friends1.stream()
-                .filter(friends2::contains)
-                .map(userStorage::getUser)
+        Collection<User> commonFriends = userStorage.getCommonFriends(id, otherId);
+        return commonFriends.stream()
+                .map(UserMapper::mapToUserDto)
                 .collect(Collectors.toSet());
     }
 
-    public Collection<User> getFriends(Long id) {
-        User user = userStorage.getUser(id);
-        return user.getFriends().stream()
-                .map(userStorage::getUser)
-                .collect(Collectors.toList());
+    public Collection<UserResponseDto> getFriends(Long id) {
+        Collection<UserResponseDto> friends = userStorage.getFriendsOfUser(id).stream()
+                .map(UserMapper::mapToUserDto)
+                .toList();
+        log.debug("Пользователь с идентификатором:{} имеет {} друзей", id, friends.size());
+        return friends;
     }
 }
